--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://burmikk.github.io/Big-News",
+  "homepage": "https://kilimanki.github.io/news-project",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /Big-News/"
+    "build": "parcel build src/*.html --public-url /news-project/"
   },
   "repository": {
     "type": "git",
